WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199366
[iOS] REGRESSION (
r246757
): Unable to select non-editable text in subframes
https://bugs.webkit.org/show_bug.cgi?id=199366
Summary
[iOS] REGRESSION (r246757): Unable to select non-editable text in subframes
Wenson Hsieh
Reported
2019-07-01 08:15:17 PDT
To reproduce: 1. Go to
https://whsieh.github.io/examples/subframes
. 2. Try to select any of the text in the first section (lorem.html) by any of the usual means (long pressing, via tap-and-half, etc.) Observe that you can’t select any text.
Attachments
Patch
(4.95 KB, patch)
2019-07-01 13:44 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-01 08:19:56 PDT
<
rdar://problem/52460509
>
Wenson Hsieh
Comment 2
2019-07-01 08:20:03 PDT
Appears to be a recent regression in iOS 13.
Wenson Hsieh
Comment 3
2019-07-01 08:39:56 PDT
Caused by:
https://trac.webkit.org/changeset/246757/webkit
That revision also caused several layout tests to consistently fail: • editing/selection/ios/dispatch-mouse-events-when-modifying-selection-quirk.html • editing/selection/ios/selection-handles-in-iframe.html • editing/selection/ios/selection-handle-clamping-in-iframe.html
Wenson Hsieh
Comment 4
2019-07-01 13:43:07 PDT
(In reply to Wenson Hsieh from
comment #3
)
> Caused by:
https://trac.webkit.org/changeset/246757/webkit
> > That revision also caused several layout tests to consistently fail: > > • > editing/selection/ios/dispatch-mouse-events-when-modifying-selection-quirk. > html
This one’s actually failing for a different reason.
> • editing/selection/ios/selection-handles-in-iframe.html > • editing/selection/ios/selection-handle-clamping-in-iframe.html
Wenson Hsieh
Comment 5
2019-07-01 13:44:18 PDT
Created
attachment 373253
[details]
Patch
WebKit Commit Bot
Comment 6
2019-07-01 15:10:51 PDT
Comment on
attachment 373253
[details]
Patch Clearing flags on attachment: 373253 Committed
r247027
: <
https://trac.webkit.org/changeset/247027
>
WebKit Commit Bot
Comment 7
2019-07-01 15:10:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug